--- a/package.json
+++ b/package.json
@@ -136,9 +136,23 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@redux-dynostore/core": "^3.1.0",
+    "@redux-dynostore/react-redux": "^3.1.0",
+    "@redux-dynostore/react-redux-subspace": "^3.1.0",
+    "@redux-dynostore/redux-saga": "^3.1.0",
+    "@redux-dynostore/redux-subspace": "^3.1.0",
+    "@redux-dynostore/redux-subspace-saga": "^3.1.0",
+    "@reduxjs/toolkit": "^1.4.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "redux": "^4.0.1"
+    "react-redux-subspace": "^6.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.1.3",
+    "redux-subspace": "^6.1.0",
+    "reselect": "^4.0.0"
   }
 }
