--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@redux-dynostore/redux-subspace": "^3.1.0",
     "@redux-dynostore/redux-subspace-saga": "^3.1.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/react-router-dom": "^5.1.5",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
